@startuml diagramme-classe-general
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam roundcorner 8
skinparam packageStyle rectangle

title Diagramme de classes général — Gestion des concours, lieux, candidats et convocations

package "Accès et rôles" #F8F8F8 {
  enum RoleUtilisateur <<enumeration>> {
    ADMINISTRATEUR
    GESTIONNAIRE
  }

  class Utilisateur {
    - id : Long
    --
    + nomUtilisateur : String
    + passwordHash : String
    + role : RoleUtilisateur
    + actif : boolean
    + creeLe : Instant
  }

  class Gestionnaire {
    --
    + importerCandidats(fichierExcel) : void
    + demarrerRepartitionAutomatique() : void
    + genererConvocations() : void
    + envoyerConvocations() : void
  }

  Utilisateur --> RoleUtilisateur
  Utilisateur <|-- Gestionnaire : profile >
  note right of Gestionnaire
    Les actions métier (import Excel,
    répartition, convocations) sont
    initiées par le gestionnaire ;
    le système exécute les traitements.
  end note
}

package "Concours" #F4FAFF {
  class Concours {
    - id : Long
    --
    + nomConcours : String
    + numeroConcours : String
    + dateConcours : LocalDate
    ..
    **Centres :** collection reliée par association
    « affecté aux centres » — villes / pôles
    où ce concours est organisé.
  }
}

package "Lieux d'examen" #FFF8F0 {
  class Centre {
    - id : Long
    --
    + nomCentre : String
    ..
    Ex. centre Rabat, centre Casablanca
    (ville / pôle où se déroule le concours).
  }

  class Etablissement {
    - id : Long
    --
    + nomEtablissement : String
  }

  class Salle {
    - id : Long
    --
    + nomSalle : String
    + capacite : int
  }

  Centre "1" *-- "1..*" Etablissement : regroupe >
  Etablissement "1" *-- "1..*" Salle : contient >

  Concours "1..*" -- "1..*" Centre : affecté aux centres >
  Concours "1..*" -- "1..*" Etablissement : organisé dans >
  Concours "1" o-- "1..*" Salle : se déroule dans >
  note bottom of Salle
    Une salle accueille **un seul** concours
    (pour la session considérée).
    Plusieurs salles peuvent être dédiées
    au même concours.
  end note
}

package "Candidatures" #F6FFF4 {
  class Candidat {
    - id : Long
    --
    + nom : String
    + prenom : String
    + ville : String
    + nomDuConcours : String
    + cin : String
    + telephone : String
    + email : String
    + numeroInscription : String
    + numeroOuNomSpecialite : String
    ..
    **nomDuConcours :** issu du fichier Excel /
    utilisé pour rapprocher le bon concours
    et le centre (ville candidat ↔ centre).
  }

  Candidat "1..*" --> "1" Concours : passe >
}

package "Répartition" #FAF4FF {
  enum ModeRepartition <<enumeration>> {
    AUTOMATIQUE
    MANUELLE
  }

  class Affectation {
    - id : Long
    --
    + mode : ModeRepartition
    + numeroPlaceDansSalle : int
    + dateAffectation : Instant
  }

  Affectation --> ModeRepartition
  Candidat "1" -- "0..1" Affectation : obtient >
  Salle "1" -- "0..*" Affectation : accueille >
  note bottom of Affectation
    Après répartition : au plus une affectation
    par candidat — **un seul centre, un seul
    établissement, une seule salle**, cohérents
    avec la composition Centre → Établissement → Salle.
  end note
}

package "Convocations" #FFF4F4 {
  class Convocation {
    - id : Long
    --
    + nom : String
    + prenom : String
    + libelleCentre : String
    + libelleEtablissement : String
    + libelleSalle : String
    + dateConvocation : LocalDate
    + numeroPlace : int
    + numeroInscription : String
    + numeroConcours : String
    + pdfGenere : boolean
    + emailEnvoye : boolean
  }

  Candidat "1" -- "0..1" Convocation : reçoit >
  note right of Convocation
    Règle métier : **au plus une convocation**
    par candidat une fois le circuit terminé.
  end note

  Convocation "0..*" --> "1" Concours : mentionne >
  Convocation "0..*" --> "1" Centre : mentionne >
  Convocation "0..*" --> "1" Etablissement : mentionne >
  Convocation "0..*" --> "1" Salle : mentionne >
  Convocation ..> Affectation : synthétise >
}

package "Traçabilité import" #EEEEEE {
  class ImportCandidats {
    - id : Long
    --
    + dateImport : Instant
    + nomFichierSource : String
  }

  ImportCandidats ..> Candidat : crée ou met à jour >
  Gestionnaire "1" -- "0..*" ImportCandidats : déclenche >
}

' --- Relations « gestion » (n — n) entre Gestionnaire et entités métier ---
Gestionnaire "1..*" --- "0..*" Candidat : gère >
Gestionnaire "1..*" --- "0..*" Concours : gère >
Gestionnaire "1..*" --- "0..*" Centre : gère >
Gestionnaire "1..*" --- "0..*" Etablissement : gère >
Gestionnaire "1..*" --- "0..*" Salle : gère >
Gestionnaire "1..*" --- "0..*" Convocation : gère >

@enduml
